// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`io: array > deep-processes nested arrays and objects 1`] = `
[
  {
    "a": [
      {
        "b": 10,
      },
    ],
  },
  [
    {
      "c": 20,
    },
  ],
]
`;

exports[`io: array > deep-processes object array items 1`] = `
[
  {
    "n": 10,
  },
  {
    "n": 2,
  },
]
`;

exports[`io: array > handles empty array 1`] = `[]`;

exports[`io: array > handles primitive array 1`] = `
[
  1,
  "a",
  true,
  null,
  undefined,
]
`;

exports[`io: array > handles sparse arrays 1`] = `
[
  1,
  undefined,
  3,
]
`;

exports[`io: object > handles deep nested objects 1`] = `
{
  "a": {
    "b": {
      "c": 2,
    },
  },
}
`;

exports[`io: object > handles flat objects 1`] = `
{
  "a": 1,
  "b": "x",
}
`;

exports[`io: object > handles object with array property 1`] = `
{
  "list": [
    {
      "n": 2,
    },
  ],
}
`;

exports[`io: primitive > handles boolean 1`] = `true`;

exports[`io: primitive > handles null 1`] = `null`;

exports[`io: primitive > handles number 1`] = `1`;

exports[`io: primitive > handles string 1`] = `"a"`;

exports[`io: primitive > handles symbol 1`] = `"Symbol(io-test)"`;

exports[`io: primitive > handles undefined 1`] = `undefined`;
